# fdk_aac_example

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  run_enc_adts.sh  run_enc_m4a.sh
example/: CMakeLists.txt  aac_adts_dec.cc  aac_adts_enc.cc  aac_m4a_enc.cc
src/: CMakeLists.txt
src/aac/: aac_encoder.h
src/audio_coding/: CMakeLists.txt
src/audio_coding/aac/: aac_adts_reader.cc  aac_adts_reader.h  aac_common.cc  aac_common.h  aac_decoder.cc  aac_decoder.h  aac_encoder.cc
src/audio_coding/wav/: wav_file.cc  wav_file.h  wav_reader.cc  wav_reader.h  wav_writer.cc  wav_writer.h
src/example/: CMakeLists.txt  aac_adts_dec.cc  aac_adts_enc.cc  aac_m4a_enc.cc
src/m4a/: m4a_writer.cc  m4a_writer.h
